Money Manager 22.8.3
* Java 19
* JavaFX 19